fixing style on small desktop size

--- a/client/src/components/OrderToPrepareCard/style.css
+++ b/client/src/components/OrderToPrepareCard/style.css
@@ -78,3 +78,9 @@
   margin: 0;
   font-size: small;
 }
+
+@media screen and (max-width: 1024px) {
+  .order-to-prepare-card-container {
+    width: 320px;
+  }
+}
